# protocol-parse

./: .gitignore  AGENT.md  CLAUDE.md  CONTRIBUTING.md  MVP_REFACTOR_SUMMARY.md  README.md  README_YAML.md  REFACTOR_CORE_CODE.md  analysis_result.txt  build_gui.py  coverage.json  debug_cmd_fields.py  direct_test.py  isolated_test.py  log_0.txt  main.py  main_gui.py  main_yaml.py  protocol_configs.py  protocol_template.yaml  pyproject.toml  pytest.ini  qt_test.py  refactor_report.txt  requirements-gui.txt  requirements.txt  run.py  run_sender.py  run_server.py  simple_debug.py  simple_test.py  sinexcel_run.py  test_detail_panel_view.py  unified_gui.py  v8_run.py  v8协议解析.code-workspace  yunwei_run.py  使用说明.txt  写代码gpt.txt  报文拆分为单个字节.py
.claude/: settings.local.json
.serena/: project.yml
configs/: protocol_template.yaml
docs/: GUI-MVP-重构完成报告.md  GUI-MVP-重构设计文档.md  GUI用户使用手册.md  Python测试代码质量审查报告.md  代码审查-剩余任务.md  代码审查-文档质量报告.md  代码审查-测试质量报告.md  代码审查-规范架构报告.md  代码审查-质量报告.md  测试完善计划.md  测试覆盖率报告.md
gui/: __init__.py  detail_panel.py  log_panel.py  main_window.py  normal_parse_page.py  protocol_panel.py  protocol_panel.py.backup  sidebar.py  themes.py  unified_main_window.py
log/: log_sys.txt
parsed_log/: 123.cap
protocoltxt/: 云快充平台协议V1.6.md  云快充平台协议V1.6.txt  充电桩系统MCU-CCU-M2以太网通信协议11-10.md  充电桩系统MCU-CCU-M2以太网通信协议11-10.txt  充电设备与充电服务平台通信规约V5.40-20240710.md  盛弘充电桩与运维平台通迅协议V3.0A03-20250702.md  盛弘充电桩与运维平台通迅协议V3.0A03-20250702.txt  盛弘充电桩后台服务器通迅协议V5.2B.md
resources/: alarm.conf  filter.txt  format.txt  format_mcu_ccu.txt  format_sinexcel.txt  format_xiaoju.txt  format_yunwei.txt
shared/: __init__.py  unified_themes.py
src/: .cursorrules  base_protocol.py  cmdformat.py  console_log.py  field_parser.py  log_scanner.py  logger_instance.py  m_print.py  protocol_configs.py  protocol_data_extractor.py  protocol_output_formatter.py  protocol_parse.py  protocol_parser.py  re_test.py  sincexcel_portocol.py  test.py  time_parser.py  unified_protocol.py  v8_protocol.py  v8_protocol2.py  validate_configs.py  xiaoju_protocol.py  yaml_cmdformat.py  yaml_config.py  yaml_field_parser.py  yaml_unified_protocol.py  yunwei_portocol.py
tcp_log/: __init__.py  log_entry_parser.py  sender_gui.py  server_gui.py  server_panel.py  tcp_client.py  tcp_server.py  themes.py
tests/: README.md  conftest.py  test_bitfield.py  test_log_scanner.py  test_m_print.py  test_protocol_data_extractor.py  test_protocol_output_formatter.py  test_protocol_parser.py  test_time_parser.py  test_validate_configs.py  test_validate_configs_main.py  test_yaml_cmdformat.py  test_yaml_config.py  test_yaml_field_parser.py  test_yaml_unified_protocol_integration.py
tool/: 报文拆分为单个字节.py
tools/: cmd_analysis.py  validate_configs.py  (+1 more)
(+131 files in other folders)
